--- a/sorter.html
+++ b/sorter.html
@@ -57,25 +57,27 @@
             <legend>
               Topics
             </legend>
-            <input type="radio" id="Science" name="Topics" value="Science" class="in">
-            <label for="Science">
-              Science
-            </label>
-            <br>
-            <input type="radio" id="Computer-Science" name="Topics" value="Computer-Science" class="in">
-            <label for="Computer-Science">
-              Computer Science
-            </label>
-            <br>
-            <input type="radio" id="Space" name="Topics" value="Space" class="in">
-            <label for="Space">
-              Space
-            </label>
-            <br>
-            <input type="radio" id="ShortStories" name="Topics" value="ShortStories" class="in">
-            <label for="ShortStories">
-              Short Stories
-            </label>
+            <div class="topics">
+              <input type="radio" id="Science" name="Topics" value="Science" class="in">
+              <label for="Science">
+                Science
+              </label>
+              <br>
+              <input type="radio" id="Computer-Science" name="Topics" value="Computer-Science" class="in">
+              <label for="Computer-Science">
+                Computer Science
+              </label>
+              <br>
+              <input type="radio" id="Space" name="Topics" value="Space" class="in">
+              <label for="Space">
+                Space
+              </label>
+              <br>
+              <input type="radio" id="ShortStories" name="Topics" value="ShortStories" class="in">
+              <label for="ShortStories">
+                Short Stories
+              </label>
+            </div>
           </fieldset>
           <br>
           <label for="autherSelect">
