--- a/sorter.html
+++ b/sorter.html
@@ -42,13 +42,13 @@
               Attributes
             </b>
           </legend>
-          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction" class="in">
+          <input type="checkbox" id="Non-Fiction" name="Catagory1" value="Non-Fiction" class="in" checked>
           <label for="Non-Fiction">
             Non-Fiction
           </label>
           <input type="text" id="Search" onkeyup="search()" placeholder="Search..." style="margin-left: 49%;">
           <br>
-          <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction" class="in">
+          <input type="checkbox" id="Fiction" name="Catagory1" value="Fiction" class="in" checked>
           <label for="Fiction">
             Fiction
           </label>
@@ -58,7 +58,7 @@
               Topics
             </legend>
             <div class="topics">
-              <input type="radio" id="Science" name="Topics" value="Science" class="in">
+              <input type="radio" id="Science" name="Topics" value="Science" class="in" checked>
               <label for="Science">
                 Science
               </label>
