--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
     </header>
-    <nav>
+    <nav class="stick">
       <hr>
         <div class="menu" style="font-size: xx-large;">
           Home
