--- a/sorter.html
+++ b/sorter.html
@@ -15,7 +15,7 @@
 <body>
   <header>
   </header>
-  <nav>
+  <nav class="stick">
     <hr>
     <div class="menu" onclick="window.location.href='index.html';">
       Home
