--- a/productPage.html
+++ b/productPage.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            SciBooks home
+            SciBooks
         </title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,18 +13,18 @@
         <header>
 
         </header>
-        <nav>
+        <nav class="stick">
             <hr>
             <div class="menu">
               Home
             </div>
           <hr>
             <div class="menu">
-              Non-Fiction
+              Lookup
             </div>
           <hr>
             <div class="menu">
-              Fiction
+              Cart
             </div>
           <hr>
         </nav>
@@ -35,6 +35,11 @@
                 <div class="pictures" onclick="Increase()">
                 </div>
             </section>
+            <aside>
+                <p>
+                    test
+                </p>
+            </aside>
         </article>
         <footer>
 
