--- a/productPage.html
+++ b/productPage.html
@@ -15,15 +15,15 @@
         </header>
         <nav class="stick">
             <hr>
-            <div class="menu">
+            <div class="menu" onclick="window.location.href='index.html';">
               Home
             </div>
           <hr>
-            <div class="menu">
+            <div class="menu" onclick="window.location.href='sorter.html';">
               Lookup
             </div>
           <hr>
-            <div class="menu">
+            <div class="menu" onclick="window.location.href='Cart.html';">
               Cart
             </div>
           <hr>
@@ -33,12 +33,10 @@
         <section>
             <div class="pictures" onclick="Increase()">
             </div>
+            <div class="sideR">
+                hello
+            </div>
         </section>
-        <aside>
-            <p>
-                test
-            </p>
-        </aside>
         <footer>
 
         </footer>
