--- a/productPage.html
+++ b/productPage.html
@@ -34,7 +34,16 @@
             <div class="pictures" onclick="Increase()">
             </div>
             <div class="sideR">
-                hello
+                <h2 id="bookTitle"></h2>
+                <hr>
+                <p id="bookDescription"></p>
+                <div id="payDeliver">
+                    <button class="cartBtn" onclick="addToCart()">
+                        <b>
+                            Add To Cart
+                        </b>
+                    </button>
+                </div>
             </div>
         </section>
         <footer>
