--- a/sorter.html
+++ b/sorter.html
@@ -118,7 +118,7 @@
     <section>
       <table>
         <tr>
-          <th class="Science">
+          <th class="Science" onclick="page0()">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -137,7 +137,7 @@
               </span>
             </span>
           </th>
-          <th class="Science">
+          <th class="Science" onclick="page1()">
             <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -158,7 +158,7 @@
               </span>
             </span>
           </th>
-          <th class="Science">
+          <th class="Science" onclick="page2()">
             <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -181,7 +181,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Science">
+          <th class="Science" onclick="page3()">
             <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -202,7 +202,7 @@
               </span>
             </span>
           </th>
-          <th class="Science">
+          <th class="Science" onclick="page4()">
             <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -223,7 +223,7 @@
               </span>
             </span>
           </th>
-          <th class="Science">
+          <th class="Science" onclick="page5()">
             <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -246,7 +246,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Science">
+          <th class="Science" onclick="page6()">
             <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -267,7 +267,7 @@
               </span>
             </span>
           </th>
-          <th class="Science">
+          <th class="Science" onclick="page7()">
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -288,7 +288,7 @@
               </span>
             </span>
           </th>
-          <th class="Computer-Science">
+          <th class="Computer-Science" onclick="page8()">
             <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -311,7 +311,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Space">
+          <th class="Space" onclick="page9()">
             <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -332,7 +332,7 @@
               </span>
             </span>
           </th>
-          <th class="Space">
+          <th class="Space" onclick="page10()">
             <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -353,7 +353,7 @@
               </span>
             </span>
           </th>
-          <th class="Space">
+          <th class="Space" onclick="page11()">
             <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -376,7 +376,7 @@
           </th>
         </tr>
         <tr>
-          <th class="ShortStories">
+          <th class="ShortStories" onclick="page12()">
             <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -397,7 +397,7 @@
               </span>
             </span>
           </th>
-          <th class="ShortStories">
+          <th class="ShortStories" onclick="page13()">
             <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -418,7 +418,7 @@
               </span>
             </span>
           </th>
-          <th class="Space">
+          <th class="Space" onclick="page14()">
             <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -441,7 +441,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Space">
+          <th class="Space" onclick="page15()">
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -462,7 +462,7 @@
               </span>
             </span>
           </th>
-          <th class="Space">
+          <th class="Space" onclick="page16()">
             <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
