--- a/sorter.html
+++ b/sorter.html
@@ -118,7 +118,7 @@
     <section>
       <table>
         <tr>
-          <th class="Science" onclick="page0()">
+          <th class="Science" onclick="page0(); window.location.href='productPage.html()';">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -137,7 +137,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page1()">
+          <th class="Science" onclick="page1(); window.location.href='productPage.html()';">
             <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -158,7 +158,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page2()">
+          <th class="Science" onclick="page2(); window.location.href='productPage.html()';">
             <img src="resources/book3(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -181,7 +181,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Science" onclick="page3()">
+          <th class="Science" onclick="page3(); window.location.href='productPage.html()';">
             <img src="resources/book4(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -202,7 +202,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page4()">
+          <th class="Science" onclick="page4(); window.location.href='productPage.html()';">
             <img src="resources/book5(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -223,7 +223,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page5()">
+          <th class="Science" onclick="page5(); window.location.href='productPage.html()';">
             <img src="resources/book6(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
