--- a/Cart.html
+++ b/Cart.html
@@ -30,6 +30,16 @@
         </div>
       <hr>
     </nav>
+    <div class="items">
+      
+    </div>
+    <div class="information">
+      <p class="totals">
+      </p>
+      <button>
+        
+      </button>
+    </div>
     <footer>
 
     </footer>
