--- a/index.html
+++ b/index.html
@@ -30,8 +30,62 @@
         </div>
       <hr>
     </nav>
+    <hr>
     <footer>
-
+      <div style="float:right; padding-right:30px;">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Support
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Contacts
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Security
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div style="float:center">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Help
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div style="float:left; padding-left:30px;">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Discord
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Twitter
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
