--- a/sorter.html
+++ b/sorter.html
@@ -246,7 +246,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Science" onclick="page6()">
+          <th class="Science" onclick="window.location.href='productPage.html';">
             <img src="resources/book7(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -267,7 +267,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="page7()">
+          <th class="Science" onclick="window.location.href='productPage.html';">
             <img src="resources/book8(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -288,7 +288,7 @@
               </span>
             </span>
           </th>
-          <th class="Computer-Science" onclick="page8()">
+          <th class="Computer-Science" onclick="window.location.href='productPage.html';">
             <img src="resources/book9(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
@@ -311,7 +311,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Space" onclick="page9()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book10(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -332,7 +332,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="page10()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book11(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -353,7 +353,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="page11()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book12(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -376,7 +376,7 @@
           </th>
         </tr>
         <tr>
-          <th class="ShortStories" onclick="page12()">
+          <th class="ShortStories" onclick="window.location.href='productPage.html';">
             <img src="resources/book13(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -397,7 +397,7 @@
               </span>
             </span>
           </th>
-          <th class="ShortStories" onclick="page13()">
+          <th class="ShortStories" onclick="window.location.href='productPage.html';">
             <img src="resources/book14(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -418,7 +418,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="page14()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book15(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -441,7 +441,7 @@
           </th>
         </tr>
         <tr>
-          <th class="Space" onclick="page15()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book16(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -462,7 +462,7 @@
               </span>
             </span>
           </th>
-          <th class="Space" onclick="page16()">
+          <th class="Space" onclick="window.location.href='productPage.html';">
             <img src="resources/book17(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
