--- a/sorter.html
+++ b/sorter.html
@@ -36,7 +36,7 @@
   <article>
     <section>
       <form method="get">
-        <fieldset>
+        <fieldset style="background-color: #eee;">
           <legend>
             <b>
               Attributes
@@ -53,7 +53,7 @@
             Fiction
           </label>
           <br>
-          <fieldset>
+          <fieldset style="backgrund-color:white;">
             <legend>
               Topics
             </legend>
@@ -490,7 +490,61 @@
 
 
   <footer>
-
+<div style="float:right; padding-right:30px;">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Support
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Contacts
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Security
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div style="float:center">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Help
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div style="float:left; padding-left:30px;">
+        <ul>
+          <li>
+            <a>
+              <b>
+                Discord
+              </b>
+            </a>
+          </li>
+          <li>
+            <a>
+              <b>
+                Twitter
+              </b>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </footer>
   </footer>
 </body>
 
