--- a/sorter.html
+++ b/sorter.html
@@ -36,7 +36,7 @@
   <article>
     <section>
       <form method="get">
-        <fieldset style="background-color: #eee;">
+        <fieldset>
           <legend>
             <b>
               Attributes
@@ -53,7 +53,7 @@
             Fiction
           </label>
           <br>
-          <fieldset style="backgrund-color:white;">
+          <fieldset>
             <legend>
               Topics
             </legend>
