--- a/sorter.html
+++ b/sorter.html
@@ -493,21 +493,21 @@
 <div style="float:right; padding-right:30px;">
         <ul>
           <li>
-            <a>
+            <a class="footerLink">
               <b>
                 Support
               </b>
             </a>
           </li>
           <li>
-            <a>
+            <a href="contacts.html" class="footerLink">
               <b>
                 Contacts
               </b>
             </a>
           </li>
           <li>
-            <a>
+            <a href="security.html" class="footerLink">
               <b>
                 Security
               </b>
@@ -518,9 +518,9 @@
       <div style="float:center">
         <ul>
           <li>
-            <a>
+            <a href="questions.html" class="footerLink">
               <b>
-                Help
+                Frequently Asked Questions
               </b>
             </a>
           </li>
