--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <hr>
     <footer>
-      <div style="float:right; padding-right:30px;">
+      <div style="text-align:right;">
         <ul>
           <li>
             <a>
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </div>
-      <div style="float:center">
+      <div style="float:center;">
         <ul>
           <li>
             <a>
@@ -68,7 +68,7 @@
           </li>
         </ul>
       </div>
-      <div style="float:left; padding-left:30px;">
+      <div style="text-align:left;">
         <ul>
           <li>
             <a>
