--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </nav>
     <hr>
     <footer>
-      <div style="text-align:right;">
+      <div style="text-align:right; padding-right:15px;">
         <ul>
           <li>
             <a>
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </div>
-      <div style="float:center;">
+      <div style="text-align:center;">
         <ul>
           <li>
             <a>
@@ -68,7 +68,7 @@
           </li>
         </ul>
       </div>
-      <div style="text-align:left;">
+      <div style="text-align:left; padding-left:15px;">
         <ul>
           <li>
             <a>
