--- a/sorter.html
+++ b/sorter.html
@@ -490,7 +490,7 @@
 
 
   <footer>
-<div style="float:right; padding-right:30px;">
+<div style="float:align; padding-right:30px;">
         <ul>
           <li>
             <a class="footerLink">
@@ -515,7 +515,7 @@
           </li>
         </ul>
       </div>
-      <div style="float:center">
+      <div style="text-align:center">
         <ul>
           <li>
             <a href="questions.html" class="footerLink">
@@ -526,7 +526,7 @@
           </li>
         </ul>
       </div>
-      <div style="float:left; padding-left:30px;">
+      <div style="text-align:left; padding-left:30px;">
         <ul>
           <li>
             <a>
