--- a/index.html
+++ b/index.html
@@ -35,21 +35,21 @@
       <div style="text-align:right; padding-right:15px;">
         <ul>
           <li>
-            <a>
+            <a class="footerLink">
               <b>
                 Support
               </b>
             </a>
           </li>
           <li>
-            <a>
+            <a href="contacts.html" class="footerLink">
               <b>
                 Contacts
               </b>
             </a>
           </li>
           <li>
-            <a>
+            <a href="security.html" class="footerLink">
               <b>
                 Security
               </b>
@@ -60,9 +60,9 @@
       <div style="text-align:center;">
         <ul>
           <li>
-            <a>
+            <a href="questions.html" class="footerLink">
               <b>
-                Help
+                Frequently Asked Questions
               </b>
             </a>
           </li>
