--- a/sorter.html
+++ b/sorter.html
@@ -490,59 +490,41 @@
 
 
   <footer>
-<div style="float:align; padding-right:30px;">
-        <ul>
-          <li>
-            <a class="footerLink">
-              <b>
-                Support
-              </b>
-            </a>
-          </li>
-          <li>
-            <a href="contacts.html" class="footerLink">
-              <b>
-                Contacts
-              </b>
-            </a>
-          </li>
-          <li>
-            <a href="security.html" class="footerLink">
-              <b>
-                Security
-              </b>
-            </a>
-          </li>
-        </ul>
+    <div style="text-align:right; padding-right:30px;">
+        <a class="footerLink">
+          <b>
+            Support
+          </b>
+        </a>
+        <a href="contacts.html" class="footerLink">
+          <b>
+            Contacts
+          </b>
+        </a>
+        <a href="security.html" class="footerLink">
+          <b>
+            Security
+          </b>
+        </a>
       </div>
       <div style="text-align:center">
-        <ul>
-          <li>
-            <a href="questions.html" class="footerLink">
-              <b>
-                Frequently Asked Questions
-              </b>
-            </a>
-          </li>
-        </ul>
+        <a href="questions.html" class="footerLink">
+          <b>
+            Frequently Asked Questions
+          </b>
+        </a>
       </div>
       <div style="text-align:left; padding-left:30px;">
-        <ul>
-          <li>
-            <a>
-              <b>
-                Discord
-              </b>
-            </a>
-          </li>
-          <li>
-            <a>
-              <b>
-                Twitter
-              </b>
-            </a>
-          </li>
-        </ul>
+        <a>
+          <b>
+            Discord
+          </b>
+        </a>
+        <a>
+          <b>
+            Twitter
+          </b>
+        </a>
       </div>
     </footer>
 </body>
