--- a/sorter.html
+++ b/sorter.html
@@ -88,6 +88,9 @@
             <option value="Michio">
               Michio Kaku
             </option>
+            <option value="Thomas">
+              Thomas Hertog
+            </option>
             <option value="hawking">
               Stephen Hawking
             </option>
