--- a/productPage.html
+++ b/productPage.html
@@ -49,33 +49,7 @@
                 </div>
               </div>
             </fieldset>
-              <script>
-                const books = [
-                  //non-fiction
-                  ["Quantum Supremacy", "15.99", "Michio Kaku", "Science", "NonFiction", ""],
-                  ["On The Origin Of Time", "15.99", "Stephen Hawking", "Science", "NonFiction", ""],
-                  ["Origins", "10.00", "Neil DeGrasse Tyson", "Science", "NonFiction", ""],
-                  ["Astrophysics for people in a hurry", "15.99", "Neil DeGrasse Tyson", "Science", "NonFiction", ""],
-                  ["An astronaut's guide to life", "10.00", "Chris Hadfield", "Science", "NonFiction", ""],
-                  ["The Grand Design", "18.00", "Stephen Hawking", "Science", "NonFiction", ""],
-                  ["Letters from an Astrophysicist", "25.00", "Neil DeGrasse Tyson", "Science", "NonFiction", ""],
-                  ["Brief Answers, Big Questions, Collection", "<span style='color:red;'><s><br>$60.00</s><br>25% off</span> $45.00", "Stephen Hawking", "Science", "NonFiction", ""],
-                  ["The C Programming Language", "15.00", "Brian W. Kernighan & Dennis M. Ritchie", "Computer Science", "NonFiction", ""],
-
-                  //fiction
-                  ["The Three Body Problem Trilogy", "50.00", "Cixin Liu", "Science Fiction", "Fiction", ""],
-                  ["Supernova Era", "15.00", "Cixin Liu", "Science Fiction", "Fiction", ""],
-                  ["Ball Lightning", "15.00", "Cixin Liu", "Science Fiction", "Fiction", ""],
-                  ["To Hold Up The Sky", "15.00", "Cixin Liu", "Short Story, Science Fiction", "Fiction", ""],
-                  ["The Wandering Earth", "15.00", "Cixin Liu", "Short Story, Science Fiction", "Fiction", ""],
-                  ["The Redemtion Of Time", "20.00", "Baoshu", "Science Fiction", "Fiction", ""],
-                  ["Bowl Of Heaven & Shipstar", "30.00", "Gregory Benford & Larry Niven", "Science Fiction", "Fiction", ""],
-                  ["Glourious", "15.00", "Gregory Benford & Larry Niven", "Science Fiction", "Fiction", ""],
-                ]
-                document.getElementById("bookTitle").innerHTML = books[7][0] + "<br>" + books[7][1];
-                document.getElementById("bookAuther").innerHTML = "By: " + books[7][2];
-                document.getElementById("bookDescription").innerHTML = books[7][5];
-              </script>
+              <script src="script.js"></Script>
         <footer>
 
         </footer>
