--- a/sorter.html
+++ b/sorter.html
@@ -8,7 +8,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" defer></script>
+  <script src="script.js"></script>
   <script src="sorter.js"></script>
 </head>
 
@@ -121,7 +121,7 @@
     <section>
       <table>
         <tr>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="page0()">
             <img src="resources/book1(1).jpg" style="max-width: 70%; max-height: 50%;">
             <br>
             <span>
@@ -140,7 +140,7 @@
               </span>
             </span>
           </th>
-          <th class="Science" onclick="window.location.href='productPage.html';">
+          <th class="Science" onclick="page1()">
             <img src="resources/book2(1).jpg" style="max-width: 70%; max-height: auto;">
             <br>
             <span>
