--- a/sorter.html
+++ b/sorter.html
@@ -153,11 +153,19 @@
               </div>
               <div class="formControl">
                 <div class="controlContainer">
-                    <div class="controlContainerTime">Min</div>
+                    <div class="controlContainerTime">
+                      <p>
+                        Min
+                      </p>
+                    </div>
                     <input class="controlContainerTimeInput" type="number" id="fromInput" value="10" min="0" max="90"/>
                 </div>
                 <div class="controlContainer">
-                    <div class="controlContainerTime">Max</div>
+                    <div class="controlContainerTime">
+                      <p>
+                        Max
+                      </p>
+                    </div>
                     <input class="controlContainerTimeInput" type="number" id="toInput" value="80" min="0" max="90"/>
                 </div>
               </div>
