--- a/sorter.html
+++ b/sorter.html
@@ -20,15 +20,15 @@
     <div class="menu" onclick="window.location.href='index.html';">
       Home
     </div>
-    <hr>
-    <div class="menu" style="font-size: xx-large;">
+    <div class="menu">
       Lookup
     </div>
-    <hr>
     <div class="menu" onclick="window.location.href='Cart.html';">
       Cart
     </div>
-    <hr>
+    <div class="menu" onclick="window.location.href='deals.html';">
+      Deals
+    </div>
   </nav>
   <br>
   <hr>
